# construct

./: .gitignore  240001_domain.pddl  240001_problem.pddl  Dockerfile  LICENSE  README.md  construct.db  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  setup.sh  startup.sh  test.sh
app/: pyproject.toml
app/construct/: database.py  llm_agent.py  main.py  pddl_generation.py  utils.py
construct/: agent.py  api.py  assign_chunks.py  database.py  event_handlers.py  eventing.py  ingestion.py  llm_agent.py  main.py  models.py  pddl_generation.py  pddl_utils.py  project.py  project_management.py  scheduler.py  utils.py
docs/: TODO.md
later/: llm_parallel.py
old-tests/: test_integration.py  test_module1_2.py  test_project_workflow.py  test_scheduler.py
resources/: test_1.xlsx  test_1_progress_1.xlsx
tests/: conftest.py  test_agent.py  test_ingestion_regression.py  test_integration_chunking.py  test_integration_real_db.py  test_project_creation.py  test_project_handle_regression.py  test_project_optic_regression.py  test_project_workflow_regression.py  test_scheduler.py  test_scheduler_actual.py
